<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/all_features_horiz_scroll"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/ccms"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CCMS"
                android:textColor="@color/white"
                android:textSize="21dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/robot"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Robot"
                android:textColor="@color/white"
                android:textSize="21dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/metro_calendar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facilities_booking"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:maxLines="2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/bim"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BIM"
                android:textColor="@color/white"
                android:textSize="21dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/toilet"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_washroom"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:maxLines="2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/all_feat_bg"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/locker"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_locker"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:maxLines="2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>