<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.home_page.HomePageActivity"
    android:background="@color/color_basic_900">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Smart FM Platform"
                    android:textColor="@color/white"
                    android:textSize="23sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/homepage_four_squares_icon"
                        android:layout_marginEnd="15dp"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/homepage_bell_icon"
                        android:layout_marginEnd="15dp"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/homepage_menu_icon" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/Chris"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_chris"
                        android:textColor="@color/white"
                        android:textSize="23sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/let_s_explore_what_s_happening_nearby"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/pfp"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/white_user"/>
            </LinearLayout>
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="10"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Sun"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="11"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Mon"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:background="@drawable/shape_orange">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="12"
                        android:textColor="@color/black"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Tue"
                        android:textColor="@color/black"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="13"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Wed"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="14"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Thu"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="15"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Fri"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="3dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="16"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="Sat"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dates_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

            </androidx.recyclerview.widget.RecyclerView>
            <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_features"
                            android:textColor="@color/white"
                            android:textSize="17sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="end">
                            <TextView
                                android:id="@+id/see_all_pack_up_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/see_all"
                                android:textColor="@color/j6_light_orange"
                                android:textSize="17sp"
                                android:layout_gravity="center"
                                android:onClick="expandOrCollapseAllFeatures"/>
                            <ImageView
                                android:id="@+id/see_all_pack_up_img"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:src="@drawable/orange_homepage_see_all_downward_arrow"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:onClick="expandOrCollapseAllFeatures"/>
                        </LinearLayout>

                    </LinearLayout>
                    <include layout="@layout/all_feat_horiz"/>

                    <include layout="@layout/all_feat_expanded" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scheduled_maintenance"
                        android:textSize="17sp"
                        android:layout_margin="15dp"
                        android:textColor="@color/white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">
                        <ListView
                            android:id="@+id/maintenance_listview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:divider="@android:color/transparent"
                            android:dividerHeight="30.0sp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_order"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:background="@drawable/work_order_slide_up_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:gravity="center">

                <TextView
                    android:id="@+id/work_order_butt"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/work_order"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <LinearLayout
                    android:id="@+id/search_butt"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="15dp">
                    <ImageView
                        android:id="@+id/search_butt_img"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:src="@drawable/white_mag_glass"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/favorite_butt"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="15dp">
                    <ImageView
                        android:id="@+id/favorite_butt_img"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:src="@drawable/white_heart"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_new_work_order"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="15dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:src="@drawable/add_new_work_order"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/fragment_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

<!--        <View-->
<!--            android:id="@+id/attendance_overlay"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="#aa111111"-->
<!--            android:visibility="gone"/>-->

<!--        <include-->
<!--            android:id="@+id/attendance"-->
<!--            layout="@layout/attendance_pop_up"-->
<!--            android:visibility="gone"/>-->

    </FrameLayout>
</RelativeLayout>